--- a/package.json
+++ b/package.json
@@ -2,7 +2,16 @@
   "name": "normalize-example",
   "version": "1.0.0",
   "author": "Andrey Evstropov <eandreyf@yandex-team.ru>",
+  "scripts": {
+    "start": "nodemon index.js --exec babel-node"
+  },
   "dependencies": {
     "express": "^4.15.3"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "nodemon": "^1.11.0"
   }
 }
